--- a/UNet_Model/Dockerfile
+++ b/UNet_Model/Dockerfile
@@ -1,5 +1,6 @@
 # Use PyTorch Latest Version
-FROM pytorch/pytorch
+FROM pytorch/pytorch:1.6.0-cuda10.1-cudnn7-runtime
+MAINTAINER Xindi Wang <sandywang.rest@gmail.com>
 
 # Install Scipy Nibabel Libary
 RUN pip install scipy nibabel
@@ -7,6 +8,8 @@ RUN pip install scipy nibabel
 # Copy UNet Codes and Models into Image
 COPY *.py /UNet_Model/
 COPY models/*.model /UNet_Model/models/
+# If you would like to reduce the size of images by removing some models, uncomment
+# COPY models/Site-All-T-epoch_36_update_with_Site_6_plus_7-epoch_09.model /UNet_Model/models/
 
 # Add UNet Path into ENV
 ENV DIMGNAME="sandywangrest/deepbet" \
